[project]
name = "comfyui-loadimagewithsubfolder-advanced"
description = "Advanced fork of liangt/comfyui-loadimagewithsubfolder with extended image formats, workflow persistence, and enhanced functionality"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/archeusabele/comfyui-loadimagewithsubfolder-advanced"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "archeusabele"
DisplayName = "Load Image With Subfolder (Advanced)"
Icon = ""

[tool.pyright]
ignore = ["**/node_helpers.py", "**/folder_paths.py", "**/server.py"]
reportMissingImports = "none"
reportMissingModuleSource = "none"

[tool.pylint]
extension-pkg-allow-list = ["node_helpers", "folder_paths", "server"]
